--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "8.0.2",
+        "php": "8.1.6",
+        "codedge/laravel-fpdf": "^1.8",
+        "firebase/php-jwt": "^6.2",
+        "greenter/lite": "^4.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7",
-        "firebase/php-jwt": "^6.2"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
